fixed overflow issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ body{
 .alt-bg{
     color: var(--primary-colour);
     background-color: var(--secondary-colour);
+    overflow:hidden;
 }
 
 /* FOOTER */
